[Refactor Codes] 가능한 코드 수정 완료.
설정 > 간격 조정
계정 다이얼로그 버튼 텍스트

--- a/app/src/main/res/layout/dialog_quit.xml
+++ b/app/src/main/res/layout/dialog_quit.xml
@@ -86,7 +86,7 @@
         <TextView
             android:id="@+id/tv_quit_no"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="14dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/dialog_btn_no"
