--- a/app/src/main/res/layout/fragment_library_sentence.xml
+++ b/app/src/main/res/layout/fragment_library_sentence.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintHorizontal_bias="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@id/rv_library_sentence"
@@ -43,7 +43,7 @@
             android:id="@+id/rdbtn_making_sentence"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginEnd="16dp"
             android:background="@drawable/rb_library_thema_make"
             android:button="@null"
             android:checked="false"
