--- a/app/src/main/res/layout/dialog_logout.xml
+++ b/app/src/main/res/layout/dialog_logout.xml
@@ -60,7 +60,7 @@
 
         <TextView
             android:id="@+id/tv_logout_yes"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="22dp"
@@ -75,7 +75,7 @@
             android:paddingTop="9dp"
             android:paddingEnd="57dp"
             android:paddingBottom="8dp"
-            android:text="네"
+            android:text="@string/yes"
             android:textColor="@color/white"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -86,8 +86,8 @@
 
         <TextView
             android:id="@+id/tv_logout_no"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="14dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/dialog_btn_no"
@@ -100,7 +100,7 @@
             android:paddingTop="9dp"
             android:paddingEnd="44dp"
             android:paddingBottom="8dp"
-            android:text="아니요"
+            android:text="@string/no"
             android:textColor="@color/soft_green"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/tv_logout_yes"
