--- a/app/src/main/res/layout/fragment_library_thema.xml
+++ b/app/src/main/res/layout/fragment_library_thema.xml
@@ -41,11 +41,12 @@
                 android:paddingTop="5dp"
                 android:paddingEnd="13dp"
                 android:paddingBottom="5dp"
-                android:text="저장한 테마"
+                android:text="@string/save_theme"
                 android:textColor="@color/radio_button_state"
                 app:layout_constraintBottom_toBottomOf="@id/rg_library_thema"
                 app:layout_constraintEnd_toStartOf="@id/rdbtn_making_thema"
                 app:layout_constraintTop_toTopOf="@id/rg_library_thema" />
+
 
             <RadioButton
                 android:id="@+id/rdbtn_making_thema"
@@ -62,7 +63,7 @@
                 android:paddingTop="5dp"
                 android:paddingEnd="11dp"
                 android:paddingBottom="5dp"
-                android:text="만든 테마"
+                android:text="@string/making_theme"
                 android:textColor="@color/radio_button_state"
                 app:layout_constraintBottom_toBottomOf="@id/rg_library_thema"
                 app:layout_constraintEnd_toEndOf="@id/rg_library_thema"
