--- a/app/src/main/res/drawable/rb_library_thema_save.xml
+++ b/app/src/main/res/drawable/rb_library_thema_save.xml
@@ -13,6 +13,7 @@
     <item android:state_checked="false">
 
         <shape>
+            <size android:width="73dp" android:height="30dp" />
             <solid android:color="#00ffffff" />
             <corners android:radius="15dp" />
         </shape>
