--- a/app/src/main/res/layout/fragment_library_sentence.xml
+++ b/app/src/main/res/layout/fragment_library_sentence.xml
@@ -34,6 +34,7 @@
             android:paddingEnd="13dp"
             android:paddingBottom="5dp"
             android:text="저장한 문장"
+            android:textAlignment="center"
             android:textColor="@color/radio_button_state"
             app:layout_constraintBottom_toBottomOf="@id/rg_library_thema"
             app:layout_constraintEnd_toStartOf="@id/rdbtn_making_thema"
@@ -63,18 +64,6 @@
 
     </RadioGroup>
 
-
-    <View
-        android:id="@+id/view16"
-        android:layout_width="0dp"
-        android:layout_height="10dp"
-        android:layout_marginTop="11dp"
-        android:layout_weight="1"
-        android:background="@drawable/topbar_gradient"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rg_library_sentence" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_library_sentence"
