--- a/app/src/main/res/layout/fragment_library_thema.xml
+++ b/app/src/main/res/layout/fragment_library_thema.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal"
+            android:includeFontPadding="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -72,18 +73,6 @@
         </RadioGroup>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    <View
-        android:id="@+id/view15"
-        android:layout_width="0dp"
-        android:layout_height="10dp"
-        android:layout_marginTop="11dp"
-        android:background="@drawable/topbar_gradient"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/thema_const1" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_library_thema"
