--- a/app/src/main/res/layout/activity_open_source_detail.xml
+++ b/app/src/main/res/layout/activity_open_source_detail.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".activity.OpenSourceActivity">
+    tools:context=".activity.OpenSourceDetailActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/fragment_open_topbar"
+        android:id="@+id/fragment_curator_topbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -17,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/activity_open_source_btn_back"
+            android:id="@+id/activity_open_detail_btn_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingStart="17dp"
@@ -30,6 +29,7 @@
             app:srcCompat="@drawable/btn_back" />
 
         <TextView
+            android:id="@+id/tv_open_detail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp"
@@ -37,7 +37,7 @@
             android:fontFamily="@font/notosanscjkkr_regular"
             android:gravity="center"
             android:includeFontPadding="false"
-            android:text="오픈소스 라이선스"
+            android:text="title"
             android:textColor="@color/black_two"
             android:textSize="19sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -47,8 +47,43 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="28dp"
+        android:clipToPadding="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_curator_topbar">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingTop="28dp">
+
+            <TextView
+                android:id="@+id/tv_open_source_content"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="20dp"
+                android:fontFamily="@font/notosanscjkkr_demilight"
+                android:includeFontPadding="false"
+                android:letterSpacing="-0.02"
+                android:text="content"
+                android:textColor="@color/black_two"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+
     <ImageView
-        android:id="@+id/imageView9"
+        android:id="@+id/imageView51"
         android:layout_width="0dp"
         android:layout_height="64dp"
         android:scaleType="fitXY"
@@ -56,22 +91,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/my_settings_service_box_blur_bottom" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_open_source"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="21dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_open_topbar"
-        app:layout_constraintVertical_bias="0.0"
-        tools:listitem="@layout/item_open_source" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
