[Implement Features] 뷰 수정사항 반영

--- a/app/src/main/res/layout/fragment_curator.xml
+++ b/app/src/main/res/layout/fragment_curator.xml
@@ -49,6 +49,8 @@
         android:id="@+id/activity_join_step2_sv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:clipToPadding="false"
+        android:paddingBottom="19dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +58,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/textView13"
@@ -115,13 +117,13 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/et_area_keyword"
+                android:fontFamily="@font/notosanscjkkr_regular"
                 android:gravity="center_horizontal"
+                android:includeFontPadding="false"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="6sp"
                 android:paddingTop="16dp"
                 android:paddingBottom="15dp"
-                android:fontFamily="@font/notosanscjkkr_regular"
-                android:includeFontPadding="false"
                 android:text="동기부여"
                 android:textColor="@color/brown_grey_two"
                 android:textSize="14sp"
@@ -135,12 +137,12 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/et_area_keyword"
+                android:fontFamily="@font/notosanscjkkr_regular"
                 android:gravity="center_horizontal"
+                android:includeFontPadding="false"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="6sp"
                 android:paddingTop="16dp"
-                android:fontFamily="@font/notosanscjkkr_regular"
-                android:includeFontPadding="false"
                 android:paddingBottom="15dp"
                 android:text="깊은생각"
                 android:textColor="@color/brown_grey_two"
@@ -155,13 +157,13 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/et_area_keyword"
+                android:fontFamily="@font/notosanscjkkr_regular"
                 android:gravity="center_horizontal"
+                android:includeFontPadding="false"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="6sp"
                 android:paddingTop="16dp"
                 android:paddingBottom="15dp"
-                android:fontFamily="@font/notosanscjkkr_regular"
-                android:includeFontPadding="false"
                 android:text="자기계발"
                 android:textColor="@color/brown_grey_two"
                 android:textSize="14sp"
@@ -175,13 +177,13 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/et_area_keyword"
+                android:fontFamily="@font/notosanscjkkr_regular"
                 android:gravity="center_horizontal"
+                android:includeFontPadding="false"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="6sp"
                 android:paddingTop="16dp"
                 android:paddingBottom="15dp"
-                android:fontFamily="@font/notosanscjkkr_regular"
-                android:includeFontPadding="false"
                 android:text="독서기록"
                 android:textColor="@color/brown_grey_two"
                 android:textSize="14sp"
@@ -195,13 +197,13 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/et_area_keyword"
+                android:fontFamily="@font/notosanscjkkr_regular"
                 android:gravity="center_horizontal"
+                android:includeFontPadding="false"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="6sp"
                 android:paddingTop="16dp"
                 android:paddingBottom="15dp"
-                android:fontFamily="@font/notosanscjkkr_regular"
-                android:includeFontPadding="false"
                 android:text="일상문장"
                 android:textColor="@color/brown_grey_two"
                 android:textSize="14sp"
