--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -47,17 +47,17 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <View
-        android:id="@+id/view11"
+        android:id="@+id/fragment_main_view_top"
         android:layout_width="0dp"
         android:layout_height="10dp"
         android:background="@drawable/topbar_gradient"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" />
 
     <ScrollView
-        android:id="@+id/scrollView2"
+        android:id="@+id/sv_main_fragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:clipToPadding="false"
