--- a/app/src/main/res/layout/item_detail_theme.xml
+++ b/app/src/main/res/layout/item_detail_theme.xml
@@ -38,17 +38,21 @@
 
     <TextView
         android:id="@+id/tv_theme_curator"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
+        android:layout_marginEnd="16dp"
+        android:ellipsize="end"
         android:fontFamily="@font/notosanscjkkr_demilight"
         android:includeFontPadding="false"
         android:letterSpacing="-0.02"
         android:lineSpacingExtra="0sp"
+        android:singleLine="true"
         android:text="  "
         android:textColor="#a7a7a7"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView4"
+        app:layout_constraintEnd_toStartOf="@+id/imageView10"
         app:layout_constraintStart_toEndOf="@+id/imageView4"
         app:layout_constraintTop_toTopOf="@+id/imageView4" />
 
