--- a/app/src/main/res/layout/activity_theme_writing_sentence_book.xml
+++ b/app/src/main/res/layout/activity_theme_writing_sentence_book.xml
@@ -266,7 +266,7 @@
         android:background="@drawable/btn_green"
         android:gravity="center_vertical"
         android:layout_marginBottom="16dp"
-        android:text="다음"
+        android:text="등록하기"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="19sp"
