--- a/app/src/main/res/layout/activity_writing_sentence_in_theme.xml
+++ b/app/src/main/res/layout/activity_writing_sentence_in_theme.xml
@@ -19,11 +19,14 @@
             android:id="@+id/activity_theme_writing_sentence_btn_out"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/theme_writing_sentence_btn_cancel"
-            android:padding="10dp"
+            android:src="@drawable/writing_sentence_book_btn_back"
+            android:paddingLeft="18.5dp"
+            android:paddingTop="15.5dp"
+            android:paddingRight="21.4dp"
+            android:paddingBottom="16.3dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="4dp"
             android:backgroundTint="@color/white"
             android:tint="#cbcbcb"
             />
