--- a/app/src/main/res/layout/dialog_writing_theme_check.xml
+++ b/app/src/main/res/layout/dialog_writing_theme_check.xml
@@ -18,60 +18,59 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:background="@drawable/dialog_area"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dialog_writing_theme_check_img">
 
-
-
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/dialog_writing_theme_check_cl1"
+        <ImageView
+            android:id="@+id/dialog_writing_theme_check_img_title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/themeimg"
+            android:scaleType="centerCrop"
+            android:layout_margin="2dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="172dp"
+            android:layout_margin="2dp"
+            android:background="@drawable/background_make_theme_check_img2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/dialog_writing_theme_check_cl2">
-            <ImageView
-                android:id="@+id/dialog_writing_theme_check_img_title"
-                android:layout_width="match_parent"
-                android:layout_height="128dp"
-                android:src="@drawable/maketheme_check_img_theme"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/dialog_writing_theme_check_tv_title"
-                app:layout_constraintBottom_toBottomOf="@id/dialog_writing_theme_check_tv_title"
-                android:scaleType="fitXY"
-                android:layout_marginTop="2dp"
-                android:layout_marginHorizontal="2dp"/>
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
-            <TextView
-                android:id="@+id/dialog_writing_theme_check_tv_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:maxLength="40"
-                android:text="번아웃을 극복하고 싶을 때 보는 문장 번아웃을 극복하고 싶을 때 보는 문장"
-                android:textColor="@color/white"
-                android:textSize="19sp"
-                android:padding="24dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/dialog_writing_theme_check_tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="128dp"
+            android:maxLength="40"
+            android:text="번아웃을 극복하고 싶을 때 보는 문장 번아웃을 극복하고 싶을 때 보는 문장 "
+            android:textColor="@color/white"
+            android:textSize="19dp"
+            android:paddingTop="24dp"
+            android:paddingHorizontal="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/dialog_writing_theme_check_cl2"
             android:layout_width="match_parent"
-            android:layout_height="175dp"
+            android:layout_height="172dp"
+            android:layout_marginTop="128dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/dialog_writing_theme_check_cl1">
+            app:layout_constraintTop_toTopOf="parent">
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/gl_left"
                 android:layout_width="wrap_content"
