--- a/app/src/main/res/layout/activity_account_setting.xml
+++ b/app/src/main/res/layout/activity_account_setting.xml
@@ -37,7 +37,7 @@
     <LinearLayout
         android:id="@+id/password_change"
         android:layout_width="match_parent"
-        android:layout_height="34dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="39dp"
         android:gravity="center_vertical"
@@ -65,7 +65,7 @@
     <LinearLayout
         android:id="@+id/logout"
         android:layout_width="match_parent"
-        android:layout_height="34dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:layout_marginTop="10dp"
@@ -93,7 +93,7 @@
     <LinearLayout
         android:id="@+id/quit_service"
         android:layout_width="match_parent"
-        android:layout_height="34dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:layout_marginTop="10dp"
