[Implement Features] 문장수정하기, 오픈소스, 회원가입 수정사항 반영

--- a/app/src/main/res/layout/activity_join_step2.xml
+++ b/app/src/main/res/layout/activity_join_step2.xml
@@ -152,6 +152,7 @@
                 android:letterSpacing="-0.04"
                 android:lineSpacingExtra="9sp"
                 android:maxLines="1"
+                android:nextFocusDown="@+id/activity_join_step2_et_pass"
                 android:paddingLeft="15dp"
                 android:paddingTop="11dp"
                 android:paddingBottom="10dp"
@@ -299,6 +300,7 @@
                 android:background="@drawable/et_area"
                 android:fontFamily="@font/notosanscjkkr_demilight"
                 android:hint="비밀번호"
+                android:nextFocusDown="@+id/activity_join_step2_et_passcheck"
                 android:includeFontPadding="false"
                 android:inputType="textPassword"
                 android:letterSpacing="-0.04"
@@ -500,6 +502,7 @@
                 android:background="@drawable/et_area"
                 android:fontFamily="@font/notosanscjkkr_demilight"
                 android:hint="닉네임"
+                android:nextFocusDown="@+id/activity_join_step2_et_nickname"
                 android:includeFontPadding="false"
                 android:inputType="text"
                 android:letterSpacing="-0.04"
