--- a/app/src/main/res/layout/activity_theme_writing_sentence_book.xml
+++ b/app/src/main/res/layout/activity_theme_writing_sentence_book.xml
@@ -24,35 +24,37 @@
         android:id="@+id/activity_theme_writing_sentence_book_topbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/activity_theme_writing_sentence_book_btn_out"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/btn_back"
-            android:padding="10dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="4dp"
             android:backgroundTint="@color/white"
+            android:paddingStart="18dp"
+            android:paddingTop="15dp"
+            android:paddingEnd="21dp"
+            android:paddingBottom="16dp"
+            android:src="@drawable/btn_back"
             android:tint="@color/veryLightPink2"
-            />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="테마에 문장 쓰기"
-            android:textSize="19sp"
             android:textColor="@color/black_two"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textSize="19sp"
+            app:layout_constraintBottom_toBottomOf="@+id/activity_theme_writing_sentence_book_btn_out"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/activity_theme_writing_sentence_book_btn_out"
-            app:layout_constraintBottom_toBottomOf="@+id/activity_theme_writing_sentence_book_btn_out"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/activity_theme_writing_sentence_book_btn_out" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -60,7 +62,7 @@
         android:id="@+id/activity_theme_writing_sentence_book_CL_book"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activity_theme_writing_sentence_book_topbar">
@@ -69,15 +71,15 @@
             android:id="@+id/gl_left22"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintGuide_begin="18dp"
-            android:orientation="vertical"/>
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="18dp" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/gl_right22"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintGuide_end="19dp"
-            android:orientation="vertical"/>
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="19dp" />
 
         <TextView
             android:id="@+id/activity_theme_writing_sentence_book_tv_5"
@@ -104,12 +106,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="책 제목"
-            android:textSize="16sp"
-            android:textColor="@color/greyish_brown"
-            android:letterSpacing="-0.02"
             android:fontFamily="@font/notosanscjkkr_regular"
             android:includeFontPadding="false"
+            android:letterSpacing="-0.02"
+            android:text="책 제목"
+            android:textColor="@color/greyish_brown"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="@+id/gl_left22"
             app:layout_constraintTop_toBottomOf="@+id/activity_theme_writing_sentence_book_tv_6" />
 
@@ -178,12 +180,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:text="작가/옮긴이"
-            android:textSize="16sp"
-            android:textColor="@color/greyish_brown"
-            android:letterSpacing="-0.02"
             android:fontFamily="@font/notosanscjkkr_regular"
             android:includeFontPadding="false"
+            android:letterSpacing="-0.02"
+            android:text="작가/옮긴이"
+            android:textColor="@color/greyish_brown"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="@+id/gl_left22"
             app:layout_constraintTop_toBottomOf="@id/activity_theme_writing_sentence_book_tv_title" />
 
@@ -193,17 +195,17 @@
             android:layout_height="46dp"
             android:layout_marginTop="9dp"
             android:background="@drawable/et_area_grey"
+            android:ellipsize="end"
+            android:fontFamily="@font/notosanscjkkr_regular"
+            android:includeFontPadding="false"
+            android:letterSpacing="-0.02"
             android:paddingStart="15dp"
             android:paddingTop="12dp"
             android:paddingEnd="15dp"
             android:paddingBottom="10dp"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            android:letterSpacing="-0.02"
-            android:fontFamily="@font/notosanscjkkr_regular"
-            android:includeFontPadding="false"
-            android:ellipsize="end"
             android:singleLine="true"
+            android:textColor="@color/black"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@id/gl_right22"
             app:layout_constraintStart_toStartOf="@+id/gl_left22"
             app:layout_constraintTop_toBottomOf="@+id/activity_theme_writing_sentence_book_tv_7" />
@@ -229,17 +231,17 @@
             android:layout_height="46dp"
             android:layout_marginTop="9dp"
             android:background="@drawable/et_area_grey"
+            android:ellipsize="end"
+            android:fontFamily="@font/notosanscjkkr_regular"
+            android:includeFontPadding="false"
+            android:letterSpacing="-0.02"
             android:paddingStart="15dp"
             android:paddingTop="12dp"
             android:paddingEnd="15dp"
             android:paddingBottom="12dp"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            android:letterSpacing="-0.02"
-            android:fontFamily="@font/notosanscjkkr_regular"
-            android:includeFontPadding="false"
-            android:ellipsize="end"
             android:singleLine="true"
+            android:textColor="@color/black"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@id/gl_right22"
             app:layout_constraintStart_toStartOf="@id/gl_left22"
             app:layout_constraintTop_toBottomOf="@+id/activity_theme_writing_sentence_book_tv_8" />
