--- a/app/src/main/res/layout/activity_theme_writing_sentence_book_search.xml
+++ b/app/src/main/res/layout/activity_theme_writing_sentence_book_search.xml
@@ -62,6 +62,11 @@
         android:layout_marginTop="22dp"
         android:background="@drawable/et_area"
         android:hint="책 제목을 검색해주세요."
+        android:textColor="@color/black"
+        android:letterSpacing="-0.02"
+        android:textSize="16sp"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:maxLength="40"
         android:maxLines="1"
         android:paddingStart="15dp"
@@ -216,6 +221,8 @@
             android:id="@+id/theme_writing_sentence_book_search_tv_cnt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/notosanscjkkr_demilight"
+            android:includeFontPadding="false"
             android:text="0"
             android:textSize="13sp"
             android:textColor="@color/soft_green"
@@ -226,6 +233,8 @@
             android:id="@+id/writing_sentence_book_search_tv_cnt2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/notosanscjkkr_demilight"
+            android:includeFontPadding="false"
             android:text="/40"
             android:textColor="@color/very_light_pink_two"
             android:textSize="13sp"
@@ -240,6 +249,8 @@
             app:layout_constraintTop_toTopOf="parent"
             android:textColor="@color/very_light_pink_two"
             android:layout_marginTop="25dp"
+            android:fontFamily="@font/notosanscjkkr_regular"
+            android:includeFontPadding="false"
             android:text="• 40자 이내로 검색해주세요"
             android:textSize="14sp"
             />
@@ -250,6 +261,8 @@
             android:layout_marginTop="50dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:fontFamily="@font/notosanscjkkr_regular"
+            android:includeFontPadding="false"
             android:textColor="@color/very_light_pink_two"
             android:text="• 책 제목의 일부만 입력해도 책을 찾을 수 있어요\n      예) 해리포터와 불의 잔 → 해리"
             android:textSize="14sp"
